--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,19 +7,15 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Admin Login</h1>
-        <form action="....." method="POST">
-            <label for="first_name">First Name: </label>
-            <input type="text" name="first_name">
-            <label for="last_name">Last Name</label>
-            <input type="text" name="last_name">
-            <label for="user_name">User Name</label>
-            <input type="text" name="user_name">
+    <h1>Login</h1>
+        <form action="/register" method="POST">
             <label for="email">Email</label>
             <input type="email" name="email">
             <label for="password">Password</label>
             <input type="password" name="password">
             <button type="submit">Login</button>
+            
+            <p>don't have any account? <a href="....">register here</a></p>
         </form>
     
 </body>
