--- a/views/partials/navbar-cust.ejs
+++ b/views/partials/navbar-cust.ejs
@@ -1,7 +1,6 @@
 <div class="navbar">
     <ul id="menu">
-        <li>Home</li>
-        <li>Chart</li>
-        <li>Setting</li>
+        <li><a href="/otobuy/customer/home">Home</a></li>
+        <li><a href="/otobuy/customer/history">History</a></li>
     </ul>
 </div>
