masih berusaha bikin chart

--- a/views/partials/navbar-cust.ejs
+++ b/views/partials/navbar-cust.ejs
@@ -3,5 +3,6 @@
         <li>Home</li>
         <li>Chart</li>
         <li>Setting</li>
+        <li><a href="/otobuy/logout">logout</a></li>
     </ul>
 </div>
