--- a/views/addBarang.ejs
+++ b/views/addBarang.ejs
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+        <%- include('./partials/navbar-cust.ejs')%>
+
     <h1>Add Item</h1>
 
     <form action="/otobuy/add" method="POST">
