--- a/views/listBarang.ejs
+++ b/views/listBarang.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+        <%- include('./partials/navbar-cust.ejs')%>
     <h1>List Item</h1>
 
     <table style="width:100%">
