--- a/views/customer/history.ejs
+++ b/views/customer/history.ejs
@@ -6,20 +6,20 @@
     </head>
     <body>
         <%- include('../partials/navbar-cust.ejs')%>
-        <h3>History Transactions</h3>
+        <h3 style="text-align:center;">History Transactions</h3>
 
         <table>
             <tr>
                 <th>No</th>
                 <th>Date</th>
                 <th>Total Transactions</th>
-
             </tr>
+            
             <% for(let i=0; i<transactions.length; i++){ %>
-                <tr>
+                <tr >
                     <td><%= i+1 %></td>
                     <td><%= getFormatDate(transactions[i].createdAt) %></td>
-                    <td><%= transactions[i].total_price%></td>
+                    <td><%= getFormatRupiah(transactions[i].total_price) %></td>
                     
                 </tr>
             <% } %>
