--- a/views/customer/home.ejs
+++ b/views/customer/home.ejs
@@ -2,32 +2,51 @@
 <html>
     <head>
         <%- include('../partials/head.ejs')%>
+        <title>Home</title>
     </head>
     <body>
         <%- include('../partials/navbar-cust.ejs')%>
-        <h3>Choose Your Item</h3>
-        <form method="POST">
+        <h3 style="text-align:center;">Choose Your Item</h3>
+       
+            <form method="GET" action="/otobuy/customer/home">
 
-            <table id="listItemCustomer">
-                <tr>
-                    <th>Car Name</th>
-                    <th>Price</th>
-                    <th>Category</th>
-                    <th>Amount Buying</th>
-                   
-                </tr>
-                <% items.forEach(item => { %>
-                    
+                <label for="filter">Filter: </label><br>
+                <label for="category">Category:</label>
+                <select name="categorySearch">
+                    <% items.forEach( (item) => {%>
+                        <option value="<%= item.Category.category_name %>"><%= item.Category.category_name %></option>             
+                    <% }) %>
+                </select>
+                <label for="minPrice"  >Min Price: </label>
+                <input type="text" name="minPrice" value="0">
+                <label for="maxPrice">Max Price: </label>
+                <input type="text" name="maxPrice" value="1000000000000">
+                <input type="submit" value="Search">
+
+            </form><br>
+        
+        <div class="listItem">
+            <form method="POST">
+
+                <table id="listItemCustomer" style="outline: 2px solid black",padding: 10px>
                     <tr>
-                        <td> <%= item.item_name %> <input type="hidden" name="item_id[]" value="<%= item.id %>" ></td>
-                        <td> <%= item.price %> <input type="hidden" name="item_price[]" value="<%= item.price %>" ></td>
-                        <td> <%= item.Category.category_name %> <input type="hidden" name="item_categories[]" value="<%= item.Category.id %>" ></td></td>
-                        <td> <input type="number" name="amount[]" min="1"> </td>
+                        <th>Car Name</th>
+                        <th>Price</th>
+                        <th>Category</th>
+                        <th>Amount Buying</th>                    
                     </tr>
-                <% })%>
-            </table>
+                    <% items.forEach(item => { %>                        
+                        <tr>
+                            <td> <%= item.item_name %> <input type="hidden" name="item_id[]" value="<%= item.id %>" ></td>
+                            <td> <%= getFormatRupiah(item.price) %> <input type="hidden" name="item_price[]" value="<%= item.price %>" ></td>
+                            <td> <%= item.Category.category_name %> <input type="hidden" name="item_categories[]" value="<%= item.Category.id %>" ></td></td>
+                            <td> <input type="number" name="amount[]" min="1"> </td>
+                        </tr>
+                    <% })%>
+                </table><br>
 
-            <input type="submit" value="Buy">
-        </form>
+                <input type="submit" value="Buy">
+            </form>
+        </div>
     </body>
 </html>
