--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <%- include ('./partials/head.ejs') %>
+        <%- include ('./partials/head.ejs') %>
         <title>Register Account</title>
     </head>
     <body>
@@ -16,7 +16,7 @@
             <label for="username">Email: </label>
             <input type="username" name="username"><br>
             <label for="password">Password</label>
-            <input type="text" name="password"><br>
+            <input type="password" name="password"><br>
             <input type="submit" value="Register"> 
         </form>
     </body>
