--- a/views/partials/navbar-cust.ejs
+++ b/views/partials/navbar-cust.ejs
@@ -10,11 +10,11 @@
 </div> -->
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo right">Logo</a>
+        <a href="#" class="brand-logo right">otoBuy</a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a href="/otobuy">logout</a></li>
+        <li><a href="/otobuy/logout">logout</a></li>
         <li><a href="/otobuy/customer/home">Home</a></li>
         <li><a href="/otobuy/customer/history">History</a></li>
         </ul>
     </div>
-    </nav>
+</nav>
